[package]
name = "kvproto-tonic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "kvproto"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
tonic = "0.10"
prost = "0.12"
protobuf = "2.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic-reflection = "0.10"
lazy_static = "1.4.0"

[build-dependencies]
tonic-build = "0.10"
prost_wrapper = { path = "./prost_wrapper" }
